# daily-ai-papers

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TEST_COVERAGE_ANALYSIS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.tsx  Layout.tsx  LoadingSpinner.tsx  PaperCard.tsx  StatusBadge.tsx
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  PaperDetailPage.tsx  PapersPage.tsx  SubmitPage.tsx
frontend/src/types/: paper.ts
src/daily_ai_papers/: __init__.py  config.py  database.py  main.py
src/daily_ai_papers/api/: chat.py  papers.py  tasks.py
src/daily_ai_papers/models/: __init__.py  paper.py
src/daily_ai_papers/schemas/: chat.py  paper.py
src/daily_ai_papers/services/: llm_client.py  submission.py  translator.py
src/daily_ai_papers/services/crawler/: __init__.py  arxiv.py  base.py
src/daily_ai_papers/services/parser/: __init__.py  metadata_extractor.py  (+1 more)
src/daily_ai_papers/tasks/: celery_app.py  crawl_tasks.py  parse_tasks.py
tests/: conftest.py  test_api_integration.py  test_celery_tasks.py  test_config.py  test_crawler_integration.py  test_crawler_unit.py  test_fake_llm.py  test_llm_client.py  test_llm_integration.py  test_papers_api.py  test_pdf_extractor_integration.py  test_pipeline_e2e.py  test_submission_service.py  test_tasks_api.py  test_translator.py
